# circuit-simulator

./: br.sh  meson.build
include/: global.hpp
include/comps/: component.hpp  dcpower.hpp  resistor.hpp  voltage_source.hpp
include/parts/: node.hpp  terminal.hpp
include/simulation/: simulation.hpp  simulation_builder.hpp  static_simulation.hpp
src/: main.cpp
src/comps/: component.cpp  dcpower.cpp  resistor.cpp  voltage_source.cpp
src/parts/: node.cpp  terminal.cpp
src/simulation/: simulation.cpp  simulation_builder.cpp  static_simulation.cpp
